# vectorstorm-testbeds

./: .gitmodules  CMakeLists.txt  SDLMain.m  main.cpp  make.vim
Data/Asteroids/: Asteroid.vec  Data.vec  DataLicenses.rtf  MediumAsteroid.vec  PlayerAttitude.vec  PlayerShip.vec  PlayerThrust.vec  Shot.vec  Shrapnel.vec  SmallAsteroid.vec  Star.vec  Thrust.vec
Data/CameraTest/: Player.vsp  Player3D.vsp
Data/CameraTest/materials/: Empty.mat  InnerWall.mat  PlayerBody.mat  PlayerBody3D.mat  Solid.mat  Wall.mat
Data/FontMaker/: Muncher.vec
Data/LerpTest/: FreeSans.txt  FreeSerif.txt
Data/LerpTest/materials/: Blue.mat  BlueLit.mat  Wall.mat
Data/MainMenu/: DataLicenses.rtf  English.xlat  MenuFrame.vec  Shrapnel.vec  Stripes.vec
Data/Preferences/: readme.txt
Data/SpaceMazeExpress/: Box.vec  PlayerAttitude.vec  PlayerThrust.vec
Data/StarShot/: Background.vec  BigBoom.beats  Boom.vec  DataLicenses.rtf  Rocket.vec
Data/Testbed/: Asteroid.vec  Background.vec  Overlay.vec  Player.vec  Poly2.vec  Polygon.vec  Texture.vec  Texture2.vec  Thrust.vec
Data/Testbed/materials/: Globe.mat  Lit.mat  Normal.mat
Data/VectorPhysics/: Cursor.vec  CursorButton.vec
Data/VectorPhysics/materials/: White.mat
Games/: GM_MainMenu.cpp  GM_MainMenu.h
Games/Asteroids/: AST_Asteroid.cpp  AST_Asteroid.h  AST_Camera.cpp  AST_Camera.h  AST_Game.cpp  AST_Game.h  AST_HowToPlay.cpp  AST_HowToPlay.h  AST_Hud.cpp  AST_Hud.h  AST_ModeGameOver.cpp  AST_ModeGameOver.h  AST_ModeHowTo.cpp  AST_ModeHowTo.h  AST_ModeInGame.cpp  AST_ModeInGame.h  AST_ModeTitleScreen.cpp  AST_ModeTitleScreen.h  AST_PlayerShip.cpp  AST_PlayerShip.h  AST_PlayerShot.cpp  AST_PlayerShot.h  AST_Star.cpp  AST_Star.h
Games/CameraTest/: CT_Camera.cpp  CT_Camera.h  CT_CameraScript.cpp  CT_CameraScript.h  CT_CameraScript3D.cpp  CT_CameraScript3D.h  CT_Game.cpp  CT_Game.h  CT_Mode2D.cpp  CT_Mode2D.h  CT_Mode3D.cpp  CT_Mode3D.h  CT_Player.cpp  CT_Player.h  CT_SafeZone.cpp  CT_SafeZone.h  CT_Stage.cpp  CT_Stage.h
Games/FontMaker/: FM_FontMaker.cpp  FM_FontMaker.h
Games/LagTest/: LAG_Game.cpp  LAG_Game.h
Games/LerpTest/: LT_Camera.cpp  LT_Camera.h  LT_Game.cpp  LT_Game.h  LT_Graph.cpp  LT_Graph.h  LT_ResponseCurve.cpp  LT_ResponseCurve.h  LT_Scenes.h
Games/LerpTest/Lerp/: LT_CameraMove.cpp  LT_CameraMove.h  LT_Lerpable.cpp  LT_Lerpable.h  LT_PlayerControl.cpp  LT_PlayerControl.h  LT_WindowFade.cpp  LT_WindowFade.h  LT_WindowSlide.cpp  LT_WindowSlide.h
Games/Preferences/: PREF_Game.cpp  PREF_Game.h
Games/SpaceMazeExpress/: SMX_Game.cpp  SMX_Game.h  SMX_Maze.cpp  SMX_Maze.h  SMX_ModeInGame.cpp  SMX_ModeInGame.h  SMX_PlayerShip.cpp  SMX_PlayerShip.h  SMX_Rope.cpp  SMX_Rope.h
Games/StarShot/: SST_Fireworks.cpp  SST_Fireworks.h  SST_Game.cpp  SST_Game.h  SST_Hud.cpp  SST_Hud.h  SST_ModeInGame.cpp  SST_ModeInGame.h  SST_Rocket.cpp  SST_Rocket.h  SST_Sequence.cpp  SST_Sequence.h
Games/Testbed/: TB_Game.cpp  TB_Game.h
Games/VectorPhysics/: VP_Drawable.cpp  VP_Drawable.h  VP_Game.cpp  VP_Game.h
osx/: Info.plist
